# mcp-obsidian-kb

./: README.md  TODO.md  _taxonomy.md  claude_project_prompt.md  pyproject.toml
docs/superpowers/plans/: 2026-04-07-knowledge-base-mcp.md
src/mcp_obsidian/: fetcher.py  kb_tools.py  obsidian.py  pdf_extractor.py  server.py  vault_utils.py
tests/: test_fetcher.py  test_kb_tools.py  test_pdf_extractor.py  test_vault_utils.py
