[project]
name = "mcp-obsidian-kb"
version = "0.3.0"
description = "MCP server for Obsidian with Zettelkasten knowledge base toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.1.0",
 "python-dotenv>=1.0.1",
 "requests>=2.32.3",
 "trafilatura>=2.0.0",
 "pymupdf>=1.25.0",
 "markdownify>=0.14.1",
]
[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.0.0",
]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"
